- termino do modulo pizzarias. - inicio do modulo cardapios.